--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,10 +10,13 @@
 		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		  crossorigin="anonymous"/>
 
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
 <!--		  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
 	<style>
-		h1 {text-align: center;}
+		h1 {text-align: center; font-size: 44px;}
 		p {text-align: center;}
 		div {text-align: center;}
 
@@ -31,37 +34,57 @@
 			 background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
 			 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
 		 }
+		@media only screen and (max-width: 800px) {
+			/* Force table to not be like tables anymore */
+			#no-more-tables table,
+			#no-more-tables thead,
+			#no-more-tables tbody,
+			#no-more-tables th,
+			#no-more-tables td,
+			#no-more-tables tr {
+				display: block;
+			}
 
-		table {
-			border-collapse: collapse;
-			border: 2px solid rgb(200,200,200);
-			letter-spacing: 1px;
-			font-size: 0.8rem;
-		}
+			/* Hide table headers (but not display: none;, for accessibility) */
+			#no-more-tables thead tr {
+				position: absolute;
+				top: -9999px;
+				left: -9999px;
+			}
 
-		td, th {
-			border: 1px solid rgb(190,190,190);
-			padding: 10px 20px;
-		}
+			#no-more-tables tr {
+				border: 1px solid #ccc;
+			}
 
-		th {
-			background-color: rgb(235,235,235);
-		}
+			#no-more-tables td {
+				/* Behave  like a "row" */
+				border: none;
+				border-bottom: 1px solid #eee;
+				position: relative;
+				padding-left: 50%;
+				white-space: normal;
+				text-align: left;
+			}
 
-		td {
-			text-align: center;
-		}
+			#no-more-tables td:before {
+				/* Now like a table header */
+				position: absolute;
+				/* Top/left values mimic padding */
+				top: 6px;
+				left: 6px;
+				width: 45%;
+				padding-right: 10px;
+				white-space: nowrap;
+				text-align: left;
+				font-weight: bold;
+			}
 
-		tr:nth-child(even) td {
-			background-color: rgb(250,250,250);
-		}
-
-		tr:nth-child(odd) td {
-			background-color: rgb(245,245,245);
-		}
-
-		caption {
-			padding: 10px;
+			/*
+              Label the data
+              */
+			#no-more-tables td:before {
+				content: attr(data-title);
+			}
 		}
 
 	</style>
@@ -84,14 +107,25 @@
 </nav>
 <br>
 <br>
-<h1>List of Users</h1>
+<!--<h1>List of Users</h1>-->
 <br>
-<table class="table">
-	<thead>
-	<tr>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<h1 class="text-center">
+				Users
+			</h1>
+			<br>
+			<br>
+		</div>
+		<div id="no-more-tables">
+			<table class="col-md-12 table-bordered table-striped table-condensed cf">
+				<thead class="cf">
+				<tr>
+
 		<th>User ID</th>
 		<th>E-mail</th>
-		<th>Account not locked</th>
+<!--		<th>Account not locked</th>-->
 		<th>Username</th>
 		<th>Active</th>
 <!--		<th>Action</th>-->
@@ -102,7 +136,7 @@
 	<tr th:each="user: ${listUsers}">
 		<td th:text="${user.id}">User ID </td>
 		<td th:text="${user.email}">E-mail</td>
-		<td th:text="${user.accountNonLocked}">Account not locked</td>
+<!--		<td th:text="${user.accountNonLocked}">Account not locked</td>-->
 		<td th:text="${user.username}">Username</td>
 		<td th:text="${user.active}">Active</td>
 <!--		<td>-->
@@ -116,41 +150,17 @@
 <br>
 <br>
 <br>
-<div class="text-center">
-	<a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
+<br>
+<br>
+</div>
+</div>
 </div>
 <br>
 <br>
 <br>
-<table>
-	<caption>
-		test table 1
-	</caption>
-	<colgroup>
-		<col />
-	</colgroup>
-	<tr>
-		<th>User ID</th>
-		<th>E-mail</th>
-		<th>Account not locked</th>
-		<th>Username</th>
-		<th>Active</th>
-		<!--		<th>Action</th>-->
-	</tr>
-	</thead>
-
-	<tbody>
-	<tr th:each="user: ${listUsers}">
-		<td th:text="${user.id}">User ID </td>
-		<td th:text="${user.email}">E-mail</td>
-		<td th:text="${user.accountNonLocked}">Account not locked</td>
-		<td th:text="${user.username}">Username</td>
-		<td th:text="${user.active}">Active</td>
-		<!--		<td>-->
-		<!--			<a class='btn btn-primary btn-sm' href='update'>Update</a>-->
-		<!--			<a class='btn btn-danger btn-sm' href='delete'>Delete</a>-->
-		</td>
-	</tr>
-</table>
+<br>
+<div class="text-center">
+	<a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
+</div>
 </body>
 </html>
